[package]
name = "advent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "01_1"

[[bin]]
name = "01_2"

[[bin]]
name = "02_1"

[[bin]]
name = "02_2"

[[bin]]
name = "03_1"

[[bin]]
name = "03_2"

[[bin]]
name = "04_1"

[[bin]]
name = "04_2"

[[bin]]
name = "05_1"

[[bin]]
name = "05_2"

[[bin]]
name = "06_1"

[[bin]]
name = "06_2"

[[bin]]
name = "07_1"

[[bin]]
name = "07_2"

[[bin]]
name = "08_1"

[[bin]]
name = "08_2"

[[bin]]
name = "09_1"

[[bin]]
name = "09_2"

[[bin]]
name = "10_1"

[[bin]]
name = "10_2"

[[bin]]
name = "11_1"

[[bin]]
name = "11_2"

[[bin]]
name = "12_1"

[[bin]]
name = "12_2"

[[bin]]
name = "13_1"

[[bin]]
name = "13_2"

[[bin]]
name = "14_1"

[[bin]]
name = "14_2"

[[bin]]
name = "15_1"

[[bin]]
name = "15_2"

[[bin]]
name = "16_1"

[[bin]]
name = "16_2"

[[bin]]
name = "17_1"

[[bin]]
name = "17_2"

[[bin]]
name = "18_1"

[[bin]]
name = "18_2"

[[bin]]
name = "19_1"

[[bin]]
name = "19_2"

[[bin]]
name = "20_1"

[[bin]]
name = "20_2"

[[bin]]
name = "21_1"

[[bin]]
name = "21_2"

[[bin]]
name = "22_1"

[[bin]]
name = "22_2"

[[bin]]
name = "23_1"

[[bin]]
name = "23_2"

[[bin]]
name = "24_1"

[[bin]]
name = "24_2"

[[bin]]
name = "25_1"

[[bin]]
name = "25_2"

